# release_bot

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  release.sh  todo.md
.github/workflows/: build.yml
resources/: report_format.md.tmpl  report_format.tex.tmpl
src/: config.rs  errors.rs  main.rs  regex.rs  report_format.md.tmpl  report_format.tex.tmpl
src/pull_list/: README.md  github_user.rs  mod.rs  pr_iterator.rs  predicate.rs  pull.rs  release.rs  repo.rs  user.rs
src/zoho_bugs/: README.md  issue.rs  issue_iterator.rs  mod.rs  task.rs  task_iterator.rs  ticket_iterator.rs  winnower.rs
src/zoho_crm/: README.md
styles/: pdf.css
