[package]
name = "release_bot"
version = "0.8.0"
authors = ["Xymist <james@jamieduerden.me>"]
readme = "README.md"
description = "Application for generating Market Dojo release notes."
homepage = "https://github.com/Xymist/release_bot"
repository = "https://github.com/Xymist/release_bot"
license = "MIT"
edition = "2018"

[dependencies]
failure = "0.1.6"
reqwest = "0.9.22"
serde = "1.0.103"
serde_derive = "1.0.103"
Inflector = "0.11.4"
toml = "0.5.5"
regex = "1.3.1"
once_cell = "1.2.0"
pretty_env_logger = "0.4.0"
log = "0.4.8"

[dependencies.zohohorrorshow]
version = "0.7.7"
# path = "../zohohorrorshow"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"

[profile.release]
lto = true
panic = "abort"
