[package]
name = "release_bot"
version = "0.8.0"
authors = ["Xymist <james@jamieduerden.me>"]
readme = "README.md"
description = "Application for generating Market Dojo release notes."
homepage = "https://github.com/Xymist/release_bot"
repository = "https://github.com/Xymist/release_bot"
license = "MIT"
edition = "2021"

[dependencies]
reqwest = "0.9.22"
serde = "1.0.103"
serde_derive = "1.0.103"
Inflector = "0.11.4"
toml = "0.5.5"
regex = "1.3.1"
log = "0.4.8"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.zohohorrorshow]
version = "0.9.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"

[profile.release]
lto = true
panic = "abort"
