[package]
name = "release_bot"
version = "1.0.4"
authors = ["Xymist <james@jamieduerden.me>"]
readme = "README.md"
description = "Application for generating Market Dojo release notes."
homepage = "https://github.com/Xymist/release_bot"
repository = "https://github.com/Xymist/release_bot"
license = "MIT"
edition = "2021"

[dependencies]
regex = "1.3.1"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
octocrab = "0.39.0"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
clap = { version = "4.5.17", features = ["derive", "env"] }
chrono = "0.4.10"

[profile.release]
lto = true
panic = "abort"
